# yqk-tools

./: .gitignore  .travis.yml  README.md  setup.cfg
src/docker-compose/clickhouse/clickhouse-config/: users.xml
src/docker-compose/embyserver/: compose.yml
src/docker-compose/moviepilot/: compose.yml
src/docker-compose/mysql8/: docker-compose.yml
src/docker-compose/mysql8/conf.d/: docker.cnf  mysql.cnf
src/docker-compose/postgresql/: docker-compose.yml
src/docker-compose/qbittorrent/: compose.yml
src/yqk_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
