[metadata]
name = yqk-tools
version = 0.0.1
author = yqk
author_email = 410728991@qq.com
description = yqk's tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yqkcn/yqk-tools
project_urls =
    Bug Tracker = https://github.com/yqkcn/yqk-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src